# agents_eva

./: .gitignore  CLAUDE.md  eva_plan.md  pyproject.toml  requirements.txt
.github/workflows/: CLAUDE.md  error-notify.yml  heartbeat.yml  morning-brief.yml  weekly-review.yml
deploy/: eva-gateway.service  nginx-eva.conf  setup.sh
docs/plans/: 2026-02-18-eva-memory-core-design.md  2026-02-18-eva-phase1-foundation.md  2026-02-19-eva-phase2-agent-core-design.md  2026-02-19-eva-phase2-implementation.md  2026-02-19-eva-phase3-design.md  2026-02-19-eva-phase3-implementation.md  2026-02-23-security-auditor-design.md  2026-02-23-security-auditor-implementation.md  2026-02-23-tool-calling-2.0-design.md  2026-02-23-tool-calling-2.0-implementation.md  2026-02-24-codex-tool-calling-implementation.md
memory/: context.md  ecosystem.md  harness.md  soul.md  telos.md  user.md  work.md
src/: CLAUDE.md  __main__.py  agent.py  composio_tools.py  eva.py  gateway.py  memory.py  tools.py
src/workflows/: __init__.py  base.py  heartbeat.py  morning_brief.py  weekly_review.py
tests/: test_agent.py  test_composio_tools.py  test_eva.py  test_gateway.py  test_memory.py  test_tools.py  test_workflows.py
